--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": ["skill-issues", "skill-issue", "npm-wrapper", "npm", "js", "npm-error", "error", "404", "cli", "fun", "useless"],
   "author": "sanxzhar",
   "license": "ISC",
   "bin": {
